[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nodes/Ui/arrow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultbox_inside_scrollbar.png" type="Texture" id=2]
[ext_resource path="res://Shaders/MenuFlavors.tres" type="Material" id=3]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultscroll.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/Reusables/Scrollbar.gd" type="Script" id=5]

[node name="Scrollbar" type="Control"]
margin_left = -8.0
margin_bottom = 88.0
rect_min_size = Vector2( 8, 0 )
rect_pivot_offset = Vector2( 8, 0 )
script = ExtResource( 5 )

[node name="UpArrow" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_bottom = 8.0
grow_horizontal = 2

[node name="arrow" parent="UpArrow" instance=ExtResource( 1 )]
position = Vector2( 0, 4 )
rotation = -1.5708
on = true

[node name="DownArrow" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -8.0

[node name="arrow" parent="DownArrow" instance=ExtResource( 1 )]
position = Vector2( 0, 4 )
rotation = 1.5708
on = true

[node name="ScrollBG" type="NinePatchRect" parent="."]
self_modulate = Color( 0.772549, 0.772549, 0.772549, 1 )
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.00002
margin_top = 9.0
margin_right = -2.0
margin_bottom = -9.0
texture = ExtResource( 2 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Thumb" type="NinePatchRect" parent="ScrollBG"]
material = ExtResource( 3 )
anchor_right = 1.0
margin_left = -1.0
margin_right = 1.0
margin_bottom = 12.0
texture = ExtResource( 4 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Tween" type="Tween" parent="."]
